--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+		"jonob/html": "1.1.*"
 	},
 	"autoload": {
 		"classmap": [
