--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		"laravel/framework": "4.0.*",
 		"jonob/html": "1.1.*",
 		"cartalyst/sentry": "2.0.*",
-		"fideloper/proxy": "dev-master"
+		"fideloper/proxy": "dev-master",
+		"davejamesmiller/laravel-breadcrumbs": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
