--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "jsvensson/golf",
 	"description": "Playing around with Laravel 4",
 	"require": {
+		"raveren/kint": "dev-master",
 		"laravel/framework": "4.0.*",
 		"cartalyst/sentry": "2.0.*",
 		"fideloper/proxy": "dev-master",
