--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 		"laravel/framework": "4.0.*",
 		"cartalyst/sentry": "2.0.*",
 		"fideloper/proxy": "dev-master",
-		"davejamesmiller/laravel-breadcrumbs": "dev-master",
+		"davejamesmiller/laravel-breadcrumbs": "2.0.*",
 		"anahkiasen/former": "dev-master",
 		"jasonlewis/basset": "dev-master",
 		"patricktalmadge/bootstrapper": "dev-develop",
