Switch to ScssPHP for .scss

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 		"anahkiasen/former": "dev-master",
 		"jasonlewis/basset": "dev-master",
 		"patricktalmadge/bootstrapper": "dev-develop",
+		"leafo/scssphp": "dev-master",
 		"barryvdh/laravel-debugbar": "dev-master"
 	},
 	"autoload": {
