Test Pagoda's build order

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
+			"php artisan debugbar:publish",
 			"php artisan optimize"
 		],
 		"pre-update-cmd": [
