Duplicate update hooks
Pagoda only runs install hooks - we need them duplicated for both install and update hooks.

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
+		  "php artisan asset:publish patricktalmadge/bootstrapper",
 			"php artisan debugbar:publish",
+			"php artisan basset:build",
 			"php artisan optimize"
 		],
 		"pre-update-cmd": [
