--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
 		"post-update-cmd": [
 		  "php artisan asset:publish patricktalmadge/bootstrapper",
 			"php artisan debugbar:publish",
-			"php artisan optimize"
+			"php artisan optimize",
+			"echo 'Removing asset builds' && rm -rf public/builds/*"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
