--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"description": "Playing around with Laravel 4",
 	"require": {
 		"raveren/kint": "dev-master",
-		"laravel/framework": "4.0.*",
+		"laravel/framework": "4.0.*@dev",
 		"cartalyst/sentry": "2.0.*",
 		"fideloper/proxy": "dev-master",
 		"davejamesmiller/laravel-breadcrumbs": "2.0.*",
