--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 		],
 		"post-update-cmd": [
 			"php artisan debugbar:publish",
-			"php artisan optimize",
+			"php artisan optimize"
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
